Preventing unwanted selection

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<body oncontextmenu="return false;">
+<body oncontextmenu="return false;" onselect="return false;" ondragstart="return false;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="script.js"></script>
 </body>
